@@ -10,7 +10,7 @@ no_slug_no_cat_idx        "Story must either have a Slug or be a Category Index.
 no_categories_for_chooser "No Sites are defined.  You must add a Site before you can create stories, media and templates."
 
 <Module "Krang::CGI::Story">
-  bad_slug                       "You have entered an invalid slug.  The slug may contain only letters, numbers, underscores and hyphens."
+  bad_slug                      "You have entered an invalid slug.  The slug may contain only letters, numbers, underscores and hyphens."
   story_save                    "Saved version $version of Story $story_id (URL: $url)."
   story_delete                  "Deleted Story $story_id (URL: $url)."
   story_checked_in_during_edit  "Story $id was checked in by another user or window while it was open here! (Changes made here were not saved.)"
@@ -259,6 +259,8 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   template_unretired                "Template $id ($url) has been unretired."
   access_denied_on_unretire         "You do not have permission to unretire Template $id ($url).  It seems that your template permissions have changed."
   duplicate_url_on_unretire         "URL conflict detected. Template $id has the same URL as Template $other_id ($url). Please make place!"
+  template_stolen_before_checkout   "Template $id has been checked out by $thief."
+  template_permissions_changed      "Your edit permissions for template $id were removed."
 </Module>
 
 <Module "Krang::CGI::User">
